--- a/sandiego.html
+++ b/sandiego.html
@@ -43,6 +43,17 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/vaga.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">VAGA</a>
+              <p>Seasonal breakfast</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/waverly.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
