--- a/sandiego.html
+++ b/sandiego.html
@@ -91,7 +91,7 @@
             </a>
             <figcaption class="mt-2">
               <a href="/" class="tstbite-category-title">Cardellino</a>
-              <p>Pull-apart cheesy garlic bread</p>
+              <p>Pull-apart cheesy garlic bread rolls</p>
             </figcaption>
           </figure>
         </div>
