--- a/sandiego.html
+++ b/sandiego.html
@@ -46,7 +46,7 @@
               <img src="assets/images/food/vaga.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">VAGA</a>
+              <a href="/" class="tstbite-category-title">Vaga</a>
               <p>Seasonal breakfast</p>
             </figcaption>
           </figure>
@@ -81,6 +81,17 @@
             <figcaption class="mt-2">
               <a href="/" class="tstbite-category-title">Blue Ocean</a>
               <p>Chicken teriyaki with white rice</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cardellino.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Nobu</a>
+              <p>Jidori chicken with teriyaki sauce, white rice, miso soup, chocolate bento box, &/or soy bananas</p>
             </figcaption>
           </figure>
         </div>
