--- a/index.html
+++ b/index.html
@@ -185,6 +185,54 @@
       </div>
     </section>
 
+    <section class="tstbite-components my-4 my-md-5">
+      <h5 class="py-3 mb-0">Favorite Spots</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/restaurant.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/desserts.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/bakeries.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/other.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bars" class="tstbite-category-title">Other</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+  </div>
+</section>
+
     <!-- <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Baking Mixes</h5>
       <div class="row">
