--- a/index.html
+++ b/index.html
@@ -200,31 +200,31 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/desserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/desserts.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a href="/desserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/bakeries" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/bakeries.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a href="/bakeries" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/other.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a href="/other" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
