--- a/vegasres.html
+++ b/vegasres.html
@@ -28,48 +28,107 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Las Vegas</h5>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/sushiroku.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+              <a href="/" class="tstbite-category-title">Sushi Roku</a>
+              <p>Chicken fried rice or jidori chicken with mashed potatoes & side of carrots</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/nobulv.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a href="/" class="tstbite-category-title">Nobu</a>
+              <p>Jidori chicken with teriyaki sauce, white rice, miso soup, chocolate bento box, &/or soy bananas</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/carbone.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a href="/" class="tstbite-category-title">Carbone</a>
+              <p>Spicy rigatoni & chocolate hazelnut cake</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/urthcaffelv.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a href="/" class="tstbite-category-title">Urth Caffe</a>
+              <p>Cheese quesadilla & belgian waffle</p>
             </figcaption>
           </figure>
         </div>
-      </div> -->
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/primrose.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Primrose</a>
+              <p>Blueberry compote vanilla pancakes</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/tableau.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Tableau</a>
+              <p>Pancakes</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/wazuzu.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Wazuzu</a>
+              <p>Chicken fried rice</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/lago.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Lago</a>
+              <p>Garlic bread</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/konagrill.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Kona Grill</a>
+              <p>Cheese flatbread & carrot cake</p>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
