--- a/sandiegores.html
+++ b/sandiegores.html
@@ -106,6 +106,17 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cucinaitaliana.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">2051 Cucina Italiana</a>
+              <p>Tortelloni burro e salvia</p>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
