--- a/vegasres.html
+++ b/vegasres.html
@@ -91,7 +91,7 @@
             </a>
             <figcaption class="mt-2">
               <a href="/" class="tstbite-category-title">Tableau</a>
-              <p>Pancakes</p>
+              <p>French toast or waffles & biscuits</p>
             </figcaption>
           </figure>
         </div>
