--- a/newyorkbakeries.html
+++ b/newyorkbakeries.html
@@ -27,11 +27,49 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/sandiegores" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/vegasres" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/newyorkbakeries" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/arizonares" style="color: #FF6330">Arizona</a></h5>
-      <h5 class="py-3 mb-0"><a href="/lares" style="color: #FF6330">Los Angeles</a></h5>
+      <h5 class="py-3 mb-0">New York</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/angelina.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Angelina Paris</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/laduree.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Ladurée</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/eclair.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Eclair Bakery</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/dominique.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Dominique Ansel</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
