--- a/newyorkbakeries.html
+++ b/newyorkbakeries.html
@@ -36,6 +36,7 @@
             </a>
             <figcaption class="mt-2">
               <a class="tstbite-category-title">Angelina Paris</a>
+              <p>Mont blanc</p>
             </figcaption>
           </figure>
         </div>
@@ -46,6 +47,7 @@
             </a>
             <figcaption class="mt-2">
               <a class="tstbite-category-title">Ladurée</a>
+              <p>Macarons & plaisir sucré cake</p>
             </figcaption>
           </figure>
         </div>
@@ -56,6 +58,7 @@
             </a>
             <figcaption class="mt-2">
               <a class="tstbite-category-title">Eclair Bakery</a>
+              <p>Crunchy cake & eclairs</p>
             </figcaption>
           </figure>
         </div>
@@ -66,6 +69,7 @@
             </a>
             <figcaption class="mt-2">
               <a class="tstbite-category-title">Dominique Ansel</a>
+              <p>Cronuts</p>
             </figcaption>
           </figure>
         </div>
