--- a/newyorkres.html
+++ b/newyorkres.html
@@ -28,48 +28,63 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">New York</h5>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/maria.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+              <a class="tstbite-category-title">Maria</a>
+              <p>Scottish salmon & baked rigatoni</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/julianas.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a class="tstbite-category-title">Juliana's Pizza</a>
+              <p>Margherita pizza</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/zeroottonove.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a class="tstbite-category-title">Zero Otto Nove</a>
+              <p>Margherita pizza</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/bistrovendome.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a class="tstbite-category-title">Bistro Vendome</a>
+              <p>Eggs benedict</p>
             </figcaption>
           </figure>
         </div>
-      </div> -->
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/oxomoco.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Oxomoco</a>
+              <p>Papas bravas</p>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
