--- a/sandiegores.html
+++ b/sandiegores.html
@@ -16,7 +16,7 @@
           <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a  class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -31,88 +31,88 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/buona.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Buona Forchetta</a>
+              <a  class="tstbite-category-title">Buona Forchetta</a>
               <p>Rigatoni with Buona Forchetta sauce</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/vaga.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Vaga</a>
+              <a  class="tstbite-category-title">Vaga</a>
               <p>Seasonal breakfast</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/waverly.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Waverly</a>
+              <a  class="tstbite-category-title">Waverly</a>
               <p>Caesar salad</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/homestead.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Homestead</a>
+              <a  class="tstbite-category-title">Homestead</a>
               <p>Grilled cheese sandwich</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/blueocean.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Blue Ocean</a>
+              <a  class="tstbite-category-title">Blue Ocean</a>
               <p>Chicken teriyaki with white rice</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/nobusd.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Nobu</a>
+              <a  class="tstbite-category-title">Nobu</a>
               <p>Jidori chicken with teriyaki sauce, white rice, miso soup, chocolate bento box, &/or soy bananas</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cucinaitaliana.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">2051 Cucina Italiana</a>
+              <a  class="tstbite-category-title">2051 Cucina Italiana</a>
               <p>Tortelloni burro e salvia</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cardellino.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Cardellino</a>
+              <a  class="tstbite-category-title">Cardellino</a>
               <p>Pull-apart cheesy garlic bread rolls</p>
             </figcaption>
           </figure>
