--- a/vegasres.html
+++ b/vegasres.html
@@ -16,7 +16,7 @@
           <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a  class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -31,99 +31,99 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/sushiroku.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Sushi Roku</a>
+              <a class="tstbite-category-title">Sushi Roku</a>
               <p>Chicken fried rice or jidori chicken with mashed potatoes & side of carrots</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/nobulv.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Nobu</a>
+              <a  class="tstbite-category-title">Nobu</a>
               <p>Jidori chicken with teriyaki sauce, white rice, miso soup, chocolate bento box, &/or soy bananas</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/carbone.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Carbone</a>
+              <a  class="tstbite-category-title">Carbone</a>
               <p>Spicy rigatoni & chocolate hazelnut cake</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/urthcaffelv.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Urth Caffe</a>
+              <a  class="tstbite-category-title">Urth Caffe</a>
               <p>Cheese quesadilla & belgian waffle</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/primrose.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Primrose</a>
+              <a  class="tstbite-category-title">Primrose</a>
               <p>Blueberry compote vanilla pancakes</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/tableau.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Tableau</a>
+              <a  class="tstbite-category-title">Tableau</a>
               <p>French toast or waffles & biscuits</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/wazuzu.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Wazuzu</a>
+              <a  class="tstbite-category-title">Wazuzu</a>
               <p>Chicken fried rice</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/lago.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Lago</a>
+              <a  class="tstbite-category-title">Lago</a>
               <p>Garlic bread</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a  class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/konagrill.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Kona Grill</a>
+              <a  class="tstbite-category-title">Kona Grill</a>
               <p>Cheese flatbread & carrot cake</p>
             </figcaption>
           </figure>
