--- a/newyorkbakeries.html
+++ b/newyorkbakeries.html
@@ -65,6 +65,17 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/maman.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Maman</a>
+              <p>Pistachio croissant</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/dominique.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
