--- a/newyorkres.html
+++ b/newyorkres.html
@@ -76,6 +76,17 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cafechina.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Cafe China</a>
+              <p>Papas bravas</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/oxomoco.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
