--- a/sandiegobakeries.html
+++ b/sandiegobakeries.html
@@ -27,63 +27,30 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">New York Bakeries</h5>
+      <h5 class="py-3 mb-0">San Diego Bakeries/Cafes</h5>
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/angelina.png" class="rounded-circle" >
+              <img src="assets/images/food/wayfarer.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a class="tstbite-category-title">Angelina Paris</a>
-              <p>Mont blanc</p>
+              <a class="tstbite-category-title">Wayfarer</a>
+              <p>Croissants</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/laduree.png" class="rounded-circle" >
+              <img src="assets/images/food/madeleine.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a class="tstbite-category-title">Ladurée</a>
-              <p>Macarons & plaisir sucré cake</p>
+              <a class="tstbite-category-title">Madeleine</a>
+              <p>Madeleines & croissants</p>
             </figcaption>
           </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/eclair.png" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a class="tstbite-category-title">Eclair Bakery</a>
-              <p>Crunchy cake & eclairs</p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/maman.png" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a class="tstbite-category-title">Maman</a>
-              <p>Pistachio croissant</p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/dominique.png" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a class="tstbite-category-title">Dominique Ansel</a>
-              <p>Cronuts</p>
-            </figcaption>
-          </figure>
-        </div>
+        </div>      
       </div>
     </section>
   </div>
