--- a/vegasres.html
+++ b/vegasres.html
@@ -27,7 +27,7 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Las Vegas</h5>
+      <h5 class="py-3 mb-0">Las Vegas Restaurants</h5>
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
