--- a/bakeries.html
+++ b/bakeries.html
@@ -27,7 +27,7 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/sandiegores" style="color: #FF6330">San Diego</a></h5>
+      <h5 class="py-3 mb-0"><a href="/sandiegobakeries" style="color: #FF6330">San Diego</a></h5>
       <h5 class="py-3 mb-0"><a href="/vegasres" style="color: #FF6330">Las Vegas</a></h5>
       <h5 class="py-3 mb-0"><a href="/newyorkbakeries" style="color: #FF6330">New York</a></h5>
       <h5 class="py-3 mb-0"><a href="/arizonares" style="color: #FF6330">Arizona</a></h5>
