--- a/sandiegodesserts.html
+++ b/sandiegodesserts.html
@@ -27,30 +27,41 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">San Diego Bakeries/Cafes</h5>
+      <h5 class="py-3 mb-0">San Diego Desserts</h5>
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/wayfarer.png" class="rounded-circle" >
+              <img src="assets/images/food/bakedbear.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a class="tstbite-category-title">Wayfarer</a>
-              <p>Croissants</p>
+              <a class="tstbite-category-title">The Baked Bear</a>
+              <p>Chocolate chip cookie</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/madeleine.png" class="rounded-circle" >
+              <img src="assets/images/food/susiecakes.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a class="tstbite-category-title">Madeleine</a>
-              <p>Madeleines & croissants</p>
+              <a class="tstbite-category-title">SusieCakes</a>
+              <p>Chocolate frosted vanilla cupcake & marble cake</p>
             </figcaption>
           </figure>
-        </div>      
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/nbc.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Nothing Bundt Cakes</a>
+              <p>Vanilla bundt cake</p>
+            </figcaption>
+          </figure>
+        </div>   
       </div>
     </section>
   </div>
