--- a/vegasres.html
+++ b/vegasres.html
@@ -68,7 +68,7 @@
               <img src="assets/images/food/urthcaffelv.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a  class="tstbite-category-title">Urth Caffe</a>
+              <a  class="tstbite-category-title">Urth Caffé</a>
               <p>Cheese quesadilla & belgian waffle</p>
             </figcaption>
           </figure>
