--- a/newyorkres.html
+++ b/newyorkres.html
@@ -80,7 +80,7 @@
             </a>
             <figcaption class="mt-2">
               <a class="tstbite-category-title">Cafe China</a>
-              <p>Papas bravas</p>
+              <p>Kung pao chicken</p>
             </figcaption>
           </figure>
         </div>
