--- a/sandiegobakeries.html
+++ b/sandiegobakeries.html
@@ -35,7 +35,7 @@
               <img src="assets/images/food/wayfarer.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a class="tstbite-category-title">Wayfarer</a>
+              <a class="tstbite-category-title">Wayfarer Bread</a>
               <p>Croissants</p>
             </figcaption>
           </figure>
