--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-2 col-md-4 col-4">
+        <!-- <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/other" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/other.png" class="rounded-circle" >
@@ -227,7 +227,7 @@
               <a href="/other" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
-        </div>
+        </div> -->
       </div>
     </section>
   </div>
